hid overflow on main tags as a short term fix to a rendering bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ header {
     height: 112px;
 }
 
+main {
+    overflow-x: hidden; 
+}
+
 .site-navbar-light {
     top: 0;
     width: 100%;
